# Marl_uav_lib

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  实验.xlsx
configs/algo/: dream_mappo.yaml  ippo.yaml  maddpg.yaml  sc_mappo.yaml
configs/env/: pyflyt.yaml  pyflyt_3v1.yaml  toy_uav.yaml
configs/experiment/: mappo_toy.yaml  pursuit_evasion_3v1.yaml  pursuit_evasion_dream_mappo_3v1.yaml  pursuit_evasion_mappo_3v1.yaml  pursuit_evasion_mappo_3v1_ex1.yaml  pursuit_evasion_mappo_3v1_ex2.yaml
configs/model/: centralized_critic.yaml  mlp.yaml
configs/search/: ex1_evader_speed_sweep.yaml  ex1_reward_grid.yaml
docker/: DOCKER_SERVER.md  train_in_container.sh
marl_uav/agents/: __init__.py  base_agent.py  mac.py
scripts/: eval.py  eval_apf_baseline.py  eval_ippo_navigation.py  launch_pursuit_server_runs.py  run_ippo_toy_uav.py  run_ippo_vs_random_navigation.py  run_mappo_toy_uav.py  run_server_exp_role_assignment.sh  run_server_exp_speed_ratio.sh  summarize_ex1_evader_speed.py  sweep_ex1_evader_speed.py  test_ex1_role_assignment_sanity.py  test_pure_manifold_tracking.py  train.py
tests/: __init__.py  test_actor_critic_policy_state.py  test_apf_pursuit.py  test_batch_shapes.py  test_buffer_base.py  test_centralized_critic_policy.py  test_env_base.py  test_episode_buffer_state.py  test_ippo_vs_mappo_smoke.py  test_learner_base.py  test_mac_with_state.py  test_mappo_learner.py  test_policy_base.py  test_pursuit_encirclement_capture.py  test_rl_utils.py  test_rollout_with_state.py  test_spatial_dispersion.py  test_value_head.py
(+106 files in other folders)
