[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marl_uav_lib"
version = "0.1.0"
description = "Multi-Agent RL library for UAV"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["marl_uav*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
